refactor major code smells from sonarcloud suggestions